# games

./: .pdm-python  docker-compose.yml
app/: .pdm-python  pyproject.toml
app/src/: main.py  schema.py
auth_service/: .pdm-python  dockerfile  pyproject.toml
auth_service/src/: .env  main.py
consumer/: .pdm-python  Dockerfile  pyproject.toml
consumer/src/: main.py
