[project]
name = "app"
version = "0.1.0"
description = "hry"
authors = [
    {name = "Petr Nguyen", email = ""},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0.post1",
    "authlib>=1.2.1",
    "httpx>=0.25.1",
    "itsdangerous>=2.1.2",
    "pymongo>=3.12.0",
    "pika>=1.3.2",
    "httpx>=0.19.0"
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = "uvicorn src.main:app --reload"
