[project]
name = "auth_service"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Petr Nguyen", email = ""},
]
dependencies = [
        "requests>=2.26.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.23.2",
    "pymongo>=4.5.0",
    "pika>=1.3.2",
    "authlib>=1.2.1",
    "itsdangerous>=2.1.2",
    "httpx>=0.19.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pdm.scripts]
dev = "uvicorn src.main:app --reload"
